Wallrun entering works
Aslo added files for HUD and widgets.

--- a/streumon_fps/streumon_fps.uproject
+++ b/streumon_fps/streumon_fps.uproject
@@ -7,7 +7,11 @@
 		{
 			"Name": "streumon_fps",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine",
+				"UMG"
+			]
 		}
 	]
 }
