--- a/streumon_fps/Config/DefaultEngine.ini
+++ b/streumon_fps/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-GlobalDefaultGameMode="/Script/streumon_fps.streumon_fpsGameMode"
+GlobalDefaultGameMode=/Game/ThirdPersonCPP/Blueprints/BP_DefaultGamemode.BP_DefaultGamemode_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
