--- a/streumon_fps/Config/DefaultInput.ini
+++ b/streumon_fps/Config/DefaultInput.ini
@@ -146,6 +146,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Wallrun",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Ampersand)
 +ActionMappings=(ActionName="AimAssist",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
 +ActionMappings=(ActionName="AimAssist",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E_AccentAigu)
++ActionMappings=(ActionName="FireWeapon",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
